<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/article_bg_big"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_course"
            android:textColor="@color/textColos"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/item_time"
            android:textColor="@color/textColos"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/item_address"
            android:textColor="@color/textColos"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/item_teacher"
            android:textColor="@color/textColos"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>
